--- a/app/src/main/res/drawable/ic_instagram_outlined.xml
+++ b/app/src/main/res/drawable/ic_instagram_outlined.xml
@@ -1,10 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path
-        android:fillColor="#fff"
-        android:pathData="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z" />
+  <path
+      android:pathData="M15,22.75L9,22.75c-5.43,0 -7.75,-2.32 -7.75,-7.75L1.25,9c0,-5.43 2.32,-7.75 7.75,-7.75h6c5.43,0 7.75,2.32 7.75,7.75v6c0,5.43 -2.32,7.75 -7.75,7.75ZM9,2.75C4.39,2.75 2.75,4.39 2.75,9v6c0,4.61 1.64,6.25 6.25,6.25h6c4.61,0 6.25,-1.64 6.25,-6.25L21.25,9c0,-4.61 -1.64,-6.25 -6.25,-6.25L9,2.75Z"
+      android:fillColor="#292D32"/>
+  <path
+      android:pathData="M12,16.25A4.26,4.26 0,0 1,7.75 12,4.26 4.26,0 0,1 12,7.75 4.26,4.26 0,0 1,16.25 12,4.26 4.26,0 0,1 12,16.25ZM12,9.25c-1.52,0 -2.75,1.23 -2.75,2.75s1.23,2.75 2.75,2.75 2.75,-1.23 2.75,-2.75S13.52,9.25 12,9.25ZM17,7.5c-0.13,0 -0.26,-0.03 -0.38,-0.08s-0.23,-0.12 -0.33,-0.21c-0.09,-0.1 -0.17,-0.21 -0.22,-0.33A0.986,0.986 0,0 1,16 6.5c0,-0.13 0.02,-0.26 0.07,-0.38 0.06,-0.13 0.13,-0.23 0.22,-0.33 0.05,-0.04 0.1,-0.09 0.15,-0.12 0.06,-0.04 0.12,-0.07 0.18,-0.09a1.006,1.006 0,0 1,1.09 0.21c0.09,0.1 0.16,0.2 0.21,0.33 0.05,0.12 0.08,0.25 0.08,0.38s-0.03,0.26 -0.08,0.38 -0.12,0.23 -0.21,0.33c-0.1,0.09 -0.21,0.16 -0.33,0.21 -0.12,0.05 -0.25,0.08 -0.38,0.08Z"
+      android:fillColor="#292D32"/>
 </vector>
