PhotosList and PhotosGrid are now wrapped in ScrollToTopLayout by default.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="navigation_bar_height">72dp</dimen>
     <dimen name="top_bar_height">64dp</dimen>
+    <dimen name="scroll_to_top_button_padding">8dp</dimen>
 </resources>
