--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="navigation_bar_height">72dp</dimen>
+    <dimen name="navigation_bar_height">80dp</dimen>
     <dimen name="top_bar_height">64dp</dimen>
+    <dimen name="list_top_padding">8dp</dimen>
+    <dimen name="list_content_bottom_padding">200.dp</dimen>
     <dimen name="scroll_to_top_button_padding">8dp</dimen>
 </resources>
