--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF303030</color>
     <color name="white">#FFF3F4F8</color>
+    <color name="ic_launcher_background">#F3F4F8</color>
 </resources>
